# iflow-memfly

./: README.md  pyproject.toml
docs/: best-practices.md
iflow_memory/: __init__.py  __main__.py  config.py  guard.py
iflow_memory/core/: __init__.py  briefing.py  daemon.py  indexer.py  summarizer.py  watcher.py
iflow_memory/serve/: __init__.py  injector.py  mcp_server.py  tools.py  ui.html  web.py
iflow_memory/store/: __init__.py  db.py  embed.py
tests/: test_indexer.py  test_store.py  test_summarizer.py
