[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iflow-memory"
version = "2.0.0"
description = "记忆飞轮 — iFlow 的记忆觉醒项目"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "李不是狼"}]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
onnx = [
    "fastembed>=0.4.0",
]

[project.scripts]
iflow-memory = "iflow_memory.__main__:main"

[tool.setuptools.packages.find]
include = ["iflow_memory*"]
